--- a/이펙티브 타입스크립트/1. 타입스크립트 알아보기.md
+++ b/이펙티브 타입스크립트/1. 타입스크립트 알아보기.md
@@ -161,3 +161,223 @@ const y: number | null = null;
 ✅ “undefined는 객체가 아닙니다” 같은 런타임 오류를 방지하기 위해서는 `strictNullChecks` 를 설정하는 것이 좋다.
 ✅ 타입스크립트에서 엄격한 체크를 하고 싶다면 strict 설정을 고려하면 된다.
 ```
+
+# 아이템 3 코드 생성과 타입이 관계없음을 이해하기
+
+- 타입스크립트는 두가지 역할을 수행한다
+
+1. 최신 타입스크입트/자바스크립트를 브라우저에서 동작 할 수 있도록 구버전의 자바스크립트로 `트랜스 파일`한다.
+2. 코드의 `타입 오류를 체크`한다.
+
+<br />
+
+```
+✅ 위 두가지는 완전히 독립적이다.
+- 타입스크립트가 자바스크립트로 변환될 때 코드 내의 타입에서는 영향을 주지 않는다.
+- 또한 자바스크립트의 실행 시점에도 타입은 영향을 미치치 않는다.
+- 타입에 오류가 있더라도 컴파일이 가능하다.
+- 자바스크립트로 컴파일되는 과정에서 모든 인터페이스, 타입, 타입 문은 은 그냥 제거된다.
+```
+
+<br />
+<br />
+
+## 타입 연산은 런타임에 영향을 주지 않는다.
+
+> 예시
+
+```js
+// 잘못된 코드
+// 코드에 아무런 정제 과정이 없고, as number은 타입연산 이므로 런타임동작에는 아무런 영향을 주지 못한다.
+//값을 정제 하기 위해서 타입을 체크 후 자바스크릡트 연산을 통해 변환을 수행 해야 한다.
+function asNumber(val:number|string) : number {
+  return val as number
+}
+
+// 변환된 자바스크립트 코드
+function asNumber(val){
+  return val;
+}
+
+//정제 과정이 들어간 옳바른 코드
+function asNumber(val:number|string):number {
+  return typeof(val) === "string" ? Number(val) : val;
+}
+```
+
+<br />
+<br />
+
+## 런타임 타입은 선언된 타입과 다를 수 있다.
+
+- `타입스크립트에서는 런타임 타임과 선언된 타입이 맞지 않을 수 있다.` 타입이 달라지는 혼란스러운 상황을 가능한 피해야 한다. `선언된 타입이 언제든지 달라질 수 있다는 것을 명심하고 있어야 한다.`
+
+```js
+interface LightApiResponse {
+  lightSwitchValue: boolean;
+}
+
+async function setLight() {
+  const response = await fetch("/light");
+  const result: LightApiResponse = await response.json();
+  setLightSwitch(result.lightSwitchValue);
+}
+
+function setLightSwitch(value: boolean) {
+  switch (value) {
+    case true:
+      turnLightOn();
+      break;
+    case false:
+      turnLightOff();
+      break;
+    default:
+      console.log("실행되지 않을까봐 걱정입니다.");
+  }
+}
+```
+
+## 타입스크립트 타입으로는 함수를 오버로드 할 수 없다.
+
+- 타입스크립트에서는 타입과 런타입의 동작이 무관하기 때문에, 함수 오버로딩이 불가능 하다.
+- 타입스크립트가 함수 오버로딩 기능을 지원하지만, 온전히 타입 수준에서만 동작한다.
+- 하나의 함수에 대해 여러 개의 선언문을 작성할 수 있는 것은 `구현체` 오직 하나 뿐이다.
+
+```
+✔ 동일한 이름에 매개 변수만 다른 여러 버전의 함수를 만드는 것 : 함수 오버로딩
+```
+
+<br />
+
+```js
+function add(a: number, b: number) {
+  return a + b;
+}
+// ~~ 중복된 함수 구현입니다.
+
+function add(a: string, b: string) {
+  return a + b;
+}
+// ~~ 중복된 함수 구현입니다.
+```
+
+<br />
+<br />
+<br />
+
+## 타입스크립트 타입은 런타임 성능에 영향을 주지 않는다.
+
+- 타입과 타입 연산자는 자바스크립트 변환 시점에 제거 되기 때문에, 런타임의 성능에 아무런 영향을 주지 않음
+  - 런타임 오버헤드가 없는 대신, 타입스크립트 컴파일러는 `빌드타임` 오버헤드가 있다.
+  - 코드 생성은 타입 시스템과 무관하다. 타입스크립트 `타입은 런타임 동작이나 성능에 영향을 주지 않는다.`
+  - 타입 오류가 존재하더라도 `컴파일` 가능하다.
+  - `타입스크립트 타입은 런타임에 사용할 수 없다`. 런타임에 타입을 지정하려면, 타입 정보 유지를 위한 별도의 방법이 필요하다.
+
+<br />
+<br />
+<br />
+
+# `아이템4` 구조적 타이핑에 익숙해지기
+
+- 자바스크립트는 덕 타이핑 기반이고, 타입스크립트가 이를 모델링하기 위해 구조적 타이핑을 사용해야함
+- 어떤 인터페이스에 할당 가능한 값이라면 타입 선언에 명시적으로 나열된 속성들을 가지고 있다. 이는 타입이 `봉인` 되어 있지 않다는 것을 의미한다.
+- `클래스 역시 구조적 타이핑 규칙을 따른다는 것을 명심해야함` 클래스의 인스턴스가 예상과는 다를수 있다.
+- 구조적 타이핑을 사용하면 유닛 테스팅을 손쉽게 할 수 있다.
+
+```
+✅ 구조적 타이핑이란?
+코드 구조 관점에서 타입이 서로 호환되는지 판단한다. 구조적으로 더 큰 타입은 작은 타입을 호환 할 수 없다.
+```
+
+> 예시 코드
+
+```js
+interface people {
+	name: 'string',
+	age: 'string'
+}
+
+interface Person {
+	name: 'string'
+}
+
+const developer: people;
+const person: Person;
+
+// 구조적으로 더 큰 타입은 적은 타입을 호환 할 수 없다.
+developer = peason; // ~~ Error
+person = developer // ~~ 정상
+```
+
+# `아이템5` any 타입 지양하기
+
+- 타입스크립트의 타입은 `점진적`이고 `선택적`이다.
+  - 코드에 타입을 조금식 추가 가능 : `점직적`
+  - 언제든지 타입 체커를 해제 가능 : `선택적`
+
+```ts
+let age: number;
+age = `12`;
+// error
+age = `12` as any; //OK
+
+// as any로 오류를 해결 할 수 있지만, any를 사용하면, 타입스크립트의 수많은 장점을 누릴 수 없게 된다.
+```
+
+<br />
+<br />
+
+- ✔`any 타입에는 안전성이 없다`
+  - number 타입으로 선언되었지만, as any를 사용해서 string 할당이 가능해짐
+  - 타입 체커는 선언에 따라 `number타입`으로 판단할 것이고, `혼돈은 걷잡을 수 없게 된다`.
+
+```ts
+let age: number;
+age = `12`;
+// error
+age = `12` as any; //OK
+
+age += 1; // 런타입에는 정상, age = `121`
+```
+
+<br />
+<br />
+
+- ✔`any는 함수 시그니처를 무시 해버린다.`
+
+  - 호출하는 쪽은 약속된 타입의 입력을 제공하고, 함수는 약속된 타입의 출력을 반환한다.
+  - `any를 사용하면 위 약속을 어길 수 있다`.
+
+> 예시
+
+```ts
+function calciualate(brithDate: Date): Number {
+  //
+}
+let birthDate: any = "1990-01-01";
+calciualate(birthDate); //정상
+```
+
+<br />
+<br />
+
+- ✔`any 타입에는 언어 서비스가 적용되지 않는다`
+  - 어떤 심벌에 타입이 있다면 타입스크립트 언어 서비스는 자동완성 기능과 적절한 도움말을 제공한다.
+  - 그러나 any타입인 심벌을 사용하면 아무런 도움을 받을 수 없다.
+
+<br />
+<br />
+
+- ✔`any 타입은 코드 리팩터링 때 버그를 감춥니다.`
+- ✔`any는 타입 설계를 감춰버린다.`
+  - 앱 상태 같은 객체를 정의하려면 꽤 복잡하다. 상태 객체 안에 있는 수많은 속성의 타입을 일일이 작성해야하는데, any 타입을 사용하면 간단히 끝내 버릴 수도 있다.
+  - 하지만 이때도 any를 사용하면 안된다. 객체를 정의할 때 특히 문제가 되는데, 상태 객체의 설계를 감춰버리기 때문이다.
+
+<br />
+<br />
+
+```
+📌any는 타입시스템의 신뢰도를 떨어뜨린다.
+📌any 타입을 사용하면 타입 체커와 타입스크립트 언어 서비스를 무력화시켜 버린다.
+📌any타입은 문제점을 감추며, 개발 경험을 나쁘게 하며 타입 시스템의 신뢰도를 떨어뜨린다.
+```
