--- a/이펙티브 타입스크립트/2. 타입스크립트의 타입 시스템.md
+++ b/이펙티브 타입스크립트/2. 타입스크립트의 타입 시스템.md
@@ -312,3 +312,216 @@ const r: Room = obj;
   - obj 타입은 Room 타입의 `부분 집합`을 `포함`하므로, Room에 할당 가능하며 `타입 체커도 통과`한다.
   - 그러나 `잉여 속성 체크 역시 조건에 따라 동작하지 않는다는 한계`가 있고, 통상적인 할당 가능 검사와 함께 쓰이면 구조적 타이핑이 무엇인지 혼란스러워질 수 있다.
   - `잉여 속성 체크`가 `할당 가능 검사`와는 `별도의 과정`이라는 것을 알아야 타입스크립트 타입 시스템에 대한 개념을 정확히 잡을 수 있다.
+
+<br />
+<br />
+<br />
+
+# `아이템12` 함수 표현식에 타입 적용하기
+
+- 타입스크립트는 `함수 표현식`을 사용하는 것이 좋다.
+- 매개 변수나 반환 값에 타입을 명시하기 보다는 함수 표현식 전체에 타입구문을 적용하는 것이 좋다
+- 다른 함수의 시그니처를 참조하려면 typeof fn를 사용하면 된다.
+
+```ts
+type DiceRollFn = (sides: number) => number;
+const rollDice: DiceRollFn = (sides) => {
+  /**/
+};
+```
+
+- 타입스크립트가 `함수 표현식`을 사용하면 좋은 이유<br />
+
+> 예제 코드
+
+```ts
+// 함수 타입의 선언은 불필요한 코드의 반복을 줄여준다.
+// 안 좋은 함수 선언의 예
+function add(a: number, b: number) {
+  return a + b;
+}
+function sub(a: number, b: number) {
+  return a - b;
+}
+function mul(a: number, b: number) {
+  return a * b;
+}
+
+//반복되는 함수 시그너처를 하나의 함수로 통합 할 수 있다.
+// 좋은 함수 선언의 예
+type BinaryFn = (a: number, b: number) => number;
+const add: BinaryFn = (a, b) => a + b;
+const sub: BinaryFn = (a, b) => a - b;
+const mul: BinaryFn = (a, b) => a * b;
+```
+
+<br />
+<br />
+<br />
+
+# `아이템13` 타입과 인터페이스 차이점 알기
+
+- 타입스크립트는 타입 정의 하는 두가지 방법이 있다.
+  - `interface`
+  - `type`
+
+> 타입 정의 두가지 방법 예제
+
+```ts
+type Tstate = {
+  name: string;
+  captial: string;
+};
+interface IState {
+  name: string;
+  captial: string;
+}
+
+// IState , Tstate 를 추가 속성과 함께 할당한다면, 동일한 오류가 발생한다.
+const wyoming : Tstate or IState ={
+  name: kim,
+  captial: seoul,
+  popu : 500000  // Tstate형식에 popu가 없습니다 Error..
+}
+```
+
+<br />
+
+## (1\_비슷한점) 인덱스 시그니처는 interface , type에서 모두 사용할 수 있다.
+
+> 인덱스 시그니처 예제
+
+```ts
+type TDict = { [key: string]: string };
+interface IDict {
+  [key: string]: string;
+}
+```
+
+<br />
+
+## (2\_비슷한점) 함수 타입도 interface , type에서 모두 사용할 수 있다.
+
+> 함수 타입 정의 예제
+
+```ts
+type TFn = (x: number) => string;
+interface IFn {
+  (x: number): string;
+}
+const toStrT: TFn = (x) => "" + x;
+const toStrT: IFn = (x) => "" + x;
+```
+
+<br />
+
+## (3\_비슷한점) 타입 별칭과 인터페이즈는 모두 제너릭이 가능하다
+
+> 위 예제
+
+```ts
+type Tpair<T> = {
+  first: T;
+  Second: T;
+};
+type IPair<T> = {
+  first: T;
+  Second: T;
+};
+```
+
+<br />
+
+## (4\_비슷한점) 인터페이스는 타입을 확장 할 수 있고, 타입은 인터페이스를 확장할 수 있습니다.
+
+- `인터페이스`는 유니온 타입 같은 `복잡한 타입을 확장하지 못한다`.
+- 복장한 타입을 확장하기 위해서 `타입`과 `&`를 사용 해야 한다.
+
+> 위 예제
+
+```ts
+//인터페이스 타입 확장
+interface ISateWithPop extends Tstate {
+  population: number;
+}
+//타입의 인터페이스 확장
+type TStateWithPop = Istate & { population: number };
+
+//ISateWithPop , TStateWithPop은 동일하다.
+```
+
+<br />
+
+## (5\_비슷한점) class 구현에서 인터페이스(Istate), 타입(Tstate) 둘 다 사용가능
+
+> 위 예제
+
+```ts
+class StateT implements Tstate {
+  name: string = "";
+  capital: string = "";
+}
+
+class StateI implements Istate {
+  name: string = "";
+  capital: string = "";
+}
+```
+
+<br />
+<br />
+
+# 인터페이스와 타입 다른 점
+
+<br />
+
+## (1\_다른점) 유니온 타입은 존재하지만, 유니온 인터페이스는 존재하지 않는다.
+
+- 인터페이스는 타입 확장가능하지만, 유니온은 할 수 없다.
+- `타입` 키워드는 일반적으로 인터페이스보다 `쓰임새가 많다.`
+  - `type키워드`는 `유니온`이 될 수 있고, 매핑된 타입 or 조건부 타입 같은 `고급 기능에 활용되기도 한다.`
+
+> 위 예시
+
+```ts
+//유니온 타입
+type AorB = "a" || "b"
+// 유니온 타입에 name 속성을 붙인 타입을 만들 수 도 있음. 이건 인터페이스로 표현할 수 없다.
+type NameVariavle = (Input | Output) & {name : string};
+
+//인터페이스
+type Input = {}
+type Output = {}
+interface VariableMap {
+  [name : string] : Input | Output;
+}
+```
+
+> 튜플과 배열도 type 키워드르 통해 더 간결하게 표현 가능하다.
+
+```ts
+// 튜틀은 type으로 구현하는 것이 좋다.
+type Pair = [number, number];
+type StringList = string[];
+type NamedNums = [string, ...number[]];
+```
+
+<br />
+
+## (2\_다른점) 인터페이스에는 타입에 없는 몇가지 기능이 있다.
+
+- 보강이 가능하다.
+  - ![image](../image/t73.png)
+  - 위 처럼 선언 병합이 가능하다.
+  - 선언 병합을 위해선 반드시 인터페이스를 사용 해야 한다.
+
+<br />
+<br />
+
+```
+✅정리
+💡 복잡한 타입이라면, 타입 별칭을 사용한다.
+💡 타입, 인터페이스 두가지로 표현 가능하다면, 일관되게 타입을 사용하거나 인터페이스를 사용하면 된다.
+💡 어떤 API에 대한 타입 선언을 작성해야 한다면, 인터페이스를 사용하는 편이 좋다.
+💡 프로젝트에서 어떤 문법을 사용할 지 결정할 때 한 가지 일관된 스타일을 확립하고, 보강 기업이 필요한지 고려해야한다.
+```
