--- a/이펙티브 타입스크립트/3. 아이템14.MD
+++ b/이펙티브 타입스크립트/3. 아이템14.MD
@@ -247,3 +247,92 @@ const Duo2: DacingDuo<{ first: string }> = [
 - 제너릭 타입은 타입을 위한 함수와 같다. 제너릭 타입을 제한하려면 extends를 사용하면 된다.
 - 표준 라이브러리에 정의된 Pick, ReturnType 같은 제너릭 타입에 익숙 해져야 한다.
 ```
+
+<br />
+
+<br />
+
+<br />
+
+# 제네릭 타입
+
+> 함수에서 사용
+
+```ts
+//T는 타입 파라미터 , 타입을 전달 받을 수 있다.
+function getSize<T>(arr: number[] | string[]) {
+  return arr.length;
+}
+const arr1 = [1, 2, 3];
+getSize(arr1); //3
+const arr2 = ["a", "b", "c"];
+getSize(arr2); //3
+
+//제너릭 타입 사용
+//T는 타입 파라미터 , 타입을 전달 받을 수 있다.
+function getSize<T>(arr: T[]) {
+  return arr.length;
+}
+const arr1 = [1, 2, 3];
+getSize<number>(arr1); // 사용하는 쪽에서 타입을 전달해줌 number -> T
+const arr2 = ["a", "b", "c"];
+getSize<string>(arr2); //3 사용하는 쪽에서 타입을 전달해줌 string -> T
+```
+
+<br />
+
+> 인터페이스에서 제너릭 사용
+
+```ts
+interface Mobile<T> {
+  name: string;
+  price: number;
+  option: T;
+}
+//사용하는쪽에서 타입 전달
+const m1: Mobile<{ color: string; coupon: boolean }> = {
+  name: "s1",
+  price: 1000,
+  option: {
+    color: "red",
+    coupon: false,
+  },
+};
+//사용하는쪽에서 타입 전달
+const m1: Mobile<string> = {
+  name: "s1",
+  price: 1000,
+  option::"good"
+};
+```
+
+<br />
+
+> 인터페이스에서 제너릭 extend 사용
+
+```ts
+interface User {
+  name: string;
+  age: number;
+}
+interface Car {
+  name: string;
+  color: string;
+}
+interface Book {
+  price: number;
+}
+
+const user: User = { name: "a", age: 10 };
+const car: Car = { name: "bmw", color: "red" };
+const book: Book = { price: 3000 };
+
+//extends 사용
+function showName<T extends { name: string }>(data: T): string {
+  return data.name;
+}
+
+showName(user); // name 속성이 있어서 Ok
+showName(car); // name 속성이 있어서 Ok
+showName(book); //name 속성이 없어서 ERROR...
+```
